--- a/02-trimming/Dockerfile
+++ b/02-trimming/Dockerfile
@@ -1,7 +1,3 @@
 # syntax=docker/dockerfile:1
-FROM continuumio/miniconda3:4.10.3-alpine
-RUN apt update
-RUN apt install -y cutadapt default-jre
-ADD https://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc_v0.11.9.zip /fastqc/
-CMD cutadapt --version
-
+FROM genomicpariscentre/trimgalore
+CMD trim_galore --paired --phred33 --length 36 -q 5 --stringency 5 --illumina -e 0.1 file1 file2
